--- a/configFiles/create_channel.yaml
+++ b/configFiles/create_channel.yaml
@@ -18,7 +18,7 @@ spec:
       - name: createchannel
         image: hyperledger/fabric-peer:1.2.1
         imagePullPolicy: Always
-        command: ["sh", "-c", "while [ ! -f /shared/status_channeltx_complete ]; do echo Waiting for channeltx; sleep 2; done; peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx && rm /shared/status_channeltx_complete && touch /shared/status_channelcreate_complete"]
+        command: ["sh", "-c", "peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx"]
         env:
         - name: CHANNEL_NAME
           value: channel1
